import java.sql.SQLException;

public interface IEmployeeDao {

    // Core Features
    void searchEmployee(String searchKey) throws SQLException;

    void updateEmployee(Employee emp) throws SQLException;

    // Returns int to confirm how many rows updated
    void applySalaryRaise(double percentage, double lowerBound, double upperBound) throws SQLException;

    // Returns the new ID generated by the database
    int addEmployee(Employee emp) throws SQLException;

    int deleteEmployee(int id) throws SQLException;

//    Employee getEmployeeById(int id) throws SQLException;

    void printDivisionReport() throws SQLException;

    void printEmployeeHistoryReport(int targetId) throws SQLException;

    void printJobTitleReport() throws SQLException;
}

